--- a/Css/Style.css
+++ b/Css/Style.css
@@ -458,11 +458,12 @@ a:active {
     display: flex;
     margin-bottom: 50px;
     margin-top: 20px;
+    margin: 0 auto;
 }
 
 .galleryThree img {
     height: 400px;
-    width: 700px;
+    width: 50vh;
     border: 2px solid black;
     padding: 5px;
     margin: 3px;
@@ -520,6 +521,19 @@ img:hover {
     }
 }
 
+@media (max-width :550px) {
+    .header {
+        width: 100%;
+        height: 25%;
+
+    }
+
+    .header ul {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
 /* Dispositivo Chico */
 @media (max-width :426px) {
     .header {
@@ -548,6 +562,8 @@ img:hover {
         display: flex;
         width: 10px;
         justify-content: space-around;
+        flex-wrap: wrap;
+
 
     }
 
@@ -560,44 +576,50 @@ img:hover {
         height: 50vh;
     }
 
-    /* Dispositivo pequeño */
-    @media (max-width :376px) {
-        .header {
-            /* width: 100vw; */
-            display: flex;
-            flex-direction: column;
-            height: max-content;
-            background-color: rgb(0, 106, 255)
-        }
 
-        .header img {
-            margin: 0 auto;
-        }
+}
 
-        .navBar li {
 
-            list-style: none;
-            margin: 1px;
-            padding: 1px;
-            border: 1px black solid;
-            border-radius: 5%;
-            background-color: rgb(255, 255, 255);
-        }
+/* Dispositivo pequeño */
+@media (max-width :376px) {
+    .header {
+        /* width: 100vw; */
+        display: flex;
+        flex-direction: column;
+        height: max-content;
+        background-color: rgb(0, 106, 255)
+    }
 
-        .navBar ul {
-            margin: 0 auto;
-            display: flex;
-            width: 10px;
-            justify-content: space-around;
-            flex-wrap: wrap;
+    .header img {
+        margin: 0 auto;
+    }
 
-        }
+    .navBar li {
 
-        .galleryThree img {
-            width: 100vw;
-            overflow: hidden;
-        }
+        list-style: none;
+        margin: 1px;
+        padding: 1px;
+        border: 1px black solid;
+        border-radius: 5%;
+        background-color: rgb(255, 255, 255);
+    }
 
-        .carousel-item img {
-            height: 50vh;
-        }
+    .navBar ul {
+
+        margin: 0 auto;
+        display: flex;
+        width: 10px;
+        justify-content: space-around;
+        flex-wrap: wrap;
+
+    }
+
+    .galleryThree img {
+        width: 100vw;
+        overflow: hidden;
+    }
+
+    .carousel-item img {
+        height: 50vh;
+    }
+}   
